# NavX

./: .gitignore  Dockerfile  Problem.md  README.md  TODO.md  build.sh  compile_commands.json  generate_empty_map.py  map.sh  map_nav.bash  nav.bash  rviz2.sh  save.bash  serial.bash  test_serial.sh  tf2.bash
docs/: build.md  git.md  problem.md  run.md
scripts/: build.sh  debug.sh  run.bash  (+4 more)
src/decision/: CMakeLists.txt  package.xml
src/decision/FSM/: CMakeLists.txt  main.cpp
src/decision/FSM/include/: action.h  condition.h  fsm.h  state.h
src/decision/include/: fsm.h
src/decision/src/: decision_node.cc  fsm.cc
src/io/serial_driver/: CMakeLists.txt  main.cc  main_node.cc  package.xml  serial.cc  serial.h  serial_node.cc  serial_node.h
src/io/serial_driver/config/: param.yaml
src/io/serial_driver/launch/: serial.launch.py
src/io/serial_driver/src/: decision.cc  decision.h  packet_typedef.h  serial.cc  serial.h  utils.h
src/io/serial_driver/src/decision/: decision.cc  decision.h  fsm.cc  fsm.h  patrol.cpp  patrol.h  type.h
src/io/serial_driver/src/ros2/: serial_node.cc  serial_node.h
src/io/serial_driver/src/serial/: crc.cpp  crc.hpp  packet_typedef.h  serial.cc  serial.h
src/io/serial_driver/src/tools/: CMakeLists.txt
src/map/RC-ESDF-2D/: CMakeLists.txt  README.md  main.cpp
src/map/RC-ESDF-2D/include/: rc_esdf.h
src/map/RC-ESDF-2D/src/: rc_esdf.cpp
src/map/common/: CMakeLists.txt
src/nav/nav2_plugins/controller/frenet_ilqr_controller/frenet_trajectory_planner/demos/: CMakeLists.txt  plan_through_waypoint_demo.cpp
src/nav/nav2_plugins/controller/frenet_ilqr_controller/frenet_trajectory_planner/demos/adapters/: circle_adapter_demo.cpp
src/nav/nav2_plugins/controller/frenet_ilqr_controller/ilqr_trajectory_tracker/: CMakeLists.txt  package.xml
src/nav/nav2_plugins/controller/frenet_ilqr_controller/ilqr_trajectory_tracker/demos/: ilqr_optimizer_demo.cpp
src/nav/nav2_plugins/controller/frenet_ilqr_controller/ilqr_trajectory_tracker/include/ilqr_trajectory_tracker/: ilqr_optimizer.hpp
src/nav/nav2_plugins/controller/frenet_ilqr_controller/ilqr_trajectory_tracker/src/: ilqr_optimizer.cpp
src/nav/nav2_plugins/controller/frenet_ilqr_controller/ilqr_trajectory_tracker/src/models/: diff_robot_model.cpp
src/nav/nav2_plugins/controller/frenet_ilqr_controller/nav2_frenet_ilqr_controller/: CMakeLists.txt  costs.xml  nav2_frenet_ilqr_controller.xml  package.xml  policies.xml
src/nav/nav2_plugins/controller/frenet_ilqr_controller/nav2_frenet_ilqr_controller/src/: frenet_ilqr_controller.cpp  parameter_handler.cpp  path_handler.cpp
src/navigation/st_opt/: CMakeLists.txt  package.xml  st_opt_plugin.xml
src/navigation/st_opt/include/: SplineTrajectory.hpp
src/navigation/st_opt/include/backend_tool/: traj_opt.hpp
src/navigation/st_opt/include/frontend_tool/: astar.hpp
src/navigation/st_opt/ros2/: st_opt_ros2.cc  st_opt_ros2.h
src/navigation/st_opt/src/: test_grid_map.cpp  test_opt.cpp
src/planner/: CMakeLists.txt
src/planner/DDR-opt-pure/: .gitignore  CMakeLists.txt  LICENSE  README.md
src/planner/DDR-opt-pure/docs/: IMPLEMENTATION.md
src/planner/DDR-opt-pure/examples/: simple_example.cpp
src/planner/DDR-opt-pure/include/ddr_optimizer/: collision_interface.h  config.h  optimizer_pure.h  trajectory_data.h
src/planner/DDR-opt-pure/src/: optimizer_core.cpp
src/planner/DDR-opt-pure/tests/: test_simple_trajectory.cpp
src/planner/cod_-rm2026_-navigation/src/cod_bringup/launch/: auto_save_map.launch.py  localization_launch.py  multiplenav_launch.py  sim_multiplenav_launch.py
src/planner/cod_-rm2026_-navigation/src/cod_bringup/maps/: test3map.pgm
src/planner/cod_-rm2026_-navigation/src/cod_bringup/params/: sim_multiplenav2_params.yaml  singlenav2_params.yaml
src/planner/nav2_planner/: .gitignore  README.md
src/planner/nav2_planner/src/ros2_simple_serial/src/: uart_transporter.cpp
src/planner/path_search/include/: a_star.h  astar.h  path_manager.h
src/planner/path_search/src/: a_star.cc  astar.cpp  path_manager.cc
src/planner/super_planner/: CMakeLists.txt
src/planner/super_planner/Apps/: fsm_node_ros2.cpp
src/planner/super_planner/config/: click_smooth_ros2.yaml  static_high_speed.yaml
src/planner/super_planner/include/ros_interface/ros2/: fsm_ros2.hpp  ros2_adapter.hpp  ros2_interface.hpp
src/planner/super_planner/include/super_core/: corridor_generator.h
src/planner/super_planner/include/utils/header/: color_msg_utils.hpp
src/planner/super_planner/launch/: fsm.launch.py
src/planner/x_planner/: CMakeLists.txt  main.cpp  package.xml  t.txt
src/planner/x_planner/DDR-opt-pure/config/: optimizer_config.yaml
src/planner/x_planner/DDR-opt-pure/docs/: README.md
src/planner/x_planner/DDR-opt-pure/include/ddr_optimizer/: trajectory_exporter.h  visualizer.h
src/planner/x_planner/DDR-opt-pure/src/: collision_checker.cpp  config.cpp  optimizer_pure.cpp  penalty_functional.cpp  penalty_functional_path.cpp  trajectory_data.cpp  utility_functions.cpp  visualizer.cpp
src/planner/x_planner/DDR-opt-pure/tests/: test_matplotlib_cpp.cpp  test_obstacle_avoidance.cpp
src/planner/x_planner/config/: param.yaml
src/planner/x_planner/docs/: opt.md
src/planner/x_planner/include/: base.h  map.h  ros2_node.h  traj_representation.h  visualization.hpp
src/planner/x_planner/include/control/: mpc.h
src/planner/x_planner/include/path_search/: jps.h
src/planner/x_planner/include/plan_env/: map.h  sdf_map.h
src/planner/x_planner/include/trajectory_optimization/: config.h  optimizer.h  trajopt.h
src/planner/x_planner/include/trajectory_optimization/gcopter/: minco.hpp  trajectory.hpp
src/planner/x_planner/launch/: run.launch.py
src/planner/x_planner/path_search/: CMakeLists.txt
src/planner/x_planner/src/: ros2_node.cc
src/planner/x_planner/src/control/: mpc.cc
src/planner/x_planner/src/path_search/: jps.cc
src/planner/x_planner/src/plan_env/: sdf_map.cc  sdf_map.cpp
src/planner/x_planner/src/test/: planner_manager.cpp  test.cpp
src/planner/x_planner/src/trajectory_optimization/: optimizer.cc  trajopt.cc
(+261 files in other folders)
